BlueJ/Lab10.1 Pictures/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Users\JAD\Downloads\apcslib.jar;C:\Users\JAD\Downloads\chndocs.jar;C:\Users\JAD\Downloads\chnutil.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;F:\BlueJ\Lab10.1 Pictures
-d
F:\BlueJ\Lab10.1 Pictures\doc
-encoding
UTF-8
-charset
UTF-8
F:\BlueJ\Lab10.1 Pictures\Pictures.java
<---- end of javadoc command ---->
Loading source file F:\BlueJ\Lab10.1 Pictures\Pictures.java...
F:\BlueJ\Lab10.1 Pictures\Pictures.java:25: error: reached end of file while parsing
    }
     ^
1 error
